[package]
name = "bevy_quinnet"
version = "0.11.0"
description = "Bevy plugin for Client/Server multiplayer games using QUIC"
repository = "https://github.com/Henauxg/bevy_quinnet"
documentation = "https://docs.rs/bevy_quinnet"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "networking", "quic", "bevy", "plugin"]
categories = ["game-development", "network-programming"]
readme = "README.md"
exclude = ["assets/"]

[workspace]
members = ["bevy_replicon_quinnet"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [] }
rustls = { version = "0.23", default-features = false, features = [] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.4"
ring = "0.17.7"
tokio = { version = "1.36.0", features = ["sync", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
rcgen = "0.13"
quinn = { version = "0.11.5", default-features = true }
quinn-proto = "0.11.8"
futures-util = "0.3.24"
futures = "0.3.24"
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
bytes = "1.5.0"
base64 = "0.13.1"
thiserror = "1.0.37"

[features]
default = ["shared-client-id", "client", "server"]
# Server sends the client id to the client, client wait for it before being “connected”
shared-client-id = []
# Enables client features
client = []
# Enables server features
server = []

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
	"bevy_asset",         # Provides asset functionality
	"bevy_audio",         # Provides audio functionality
	"vorbis",             # OGG/VORBIS audio format support
	"bevy_window",        # Windowing layer
	"bevy_render",        # Provides rendering functionality
	"bevy_sprite",        # Provides sprite functionality
	"bevy_ui",            # A custom ECS-driven UI framework
	"bevy_text",          # Provides text functionality
	"bevy_core_pipeline", # Provides cameras and other basic render pipeline features
	"x11",                # X11 display server support

	# Can be removed later, temporary fixes for a bug in "0.14.0-rc.2"
	"bevy_state",
	"serialize",
	"bevy_scene",
	"bevy_pbr",
	"ktx2",
	"zstd",
] }
rand = "0.8.5"

[[example]]
name = "breakout"
path = "examples/breakout/breakout.rs"

[[example]]
name = "chat-server"
path = "examples/chat/server.rs"

[[example]]
name = "chat-client"
path = "examples/chat/client.rs"
