[package]
name = "bevy_quinnet"
version = "0.17.0"
description = "Bevy plugin for Client/Server multiplayer games using QUIC"
repository = "https://github.com/Henauxg/bevy_quinnet"
documentation = "https://docs.rs/bevy_quinnet"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "networking", "quic", "bevy", "plugin"]
categories = ["game-development", "network-programming"]
readme = "README.md"
exclude = ["assets/"]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = ["bevy_log"] }
rustls = { version = "0.23", default-features = false, features = [] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
ring = "0.17.7"
tokio = { version = "1.36.0", features = ["sync", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
rcgen = "0.13"
quinn = { version = "0.11.5", default-features = true }
quinn-proto = "0.11.8"
futures-util = "0.3.24"
futures = "0.3.24"
bytes = "1.5.0"
base64 = "0.13.1"
thiserror = "1.0.37"

# Optional
bincode = { version = "2.0.1", optional = true, features = ["serde"] }
serde = { version = "1.0.145", optional = true, features = ["derive"] }

[features]
default = ["shared-client-id", "client", "server"]
# Server sends the client id to the client, client wait for it before being “connected”
shared-client-id = []
# Enables client features
client = []
# Enables server features
server = []
# Adds some quick utility methods on server and client to send messages directly (serialized/deserialized with bincode)
bincode-messages = ["bincode", "serde"]

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
	"bevy_asset",         # Provides asset functionality
	"bevy_audio",         # Provides audio functionality
	"vorbis",             # OGG/VORBIS audio format support
	"bevy_window",        # Windowing layer
	"bevy_render",        # Provides rendering functionality
	"bevy_sprite",        # Provides sprite functionality
	"bevy_ui",            # A custom ECS-driven UI framework
	"bevy_state",         # Provides state management functionality
	"bevy_text",          # Provides text functionality
	"bevy_core_pipeline", # Provides cameras and other basic render pipeline feature
	"serialize",
	"x11",                # X11 display server support
] }
rand = "0.8.5"
strum = { version = "0.27.2", features = ["derive"] }

[[example]]
name = "breakout"
path = "examples/breakout/breakout.rs"
required-features = ["bincode-messages"]

[[example]]
name = "chat-server"
path = "examples/chat/server.rs"
required-features = ["bincode-messages"]

[[example]]
name = "chat-client"
path = "examples/chat/client.rs"
required-features = ["bincode-messages"]
