[package]
name = "bevy_replicon_quinnet"
version = "0.5.0"
description = "Integration with bevy_quinnet for bevy_replicon"
repository = "https://github.com/Henauxg/bevy_quinnet"
documentation = "https://docs.rs/bevy_replicon_quinnet"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "networking", "quic", "bevy", "plugin"]
categories = ["game-development", "network-programming"]
readme = "README.md"
exclude = ["assets/"]

[dependencies]
bevy_replicon = { version = "0.28", default-features = false }
bevy_quinnet = { version = "0.10.0", path = "..", default-features = false }
bevy = { version = "0.14", default-features = false }

[features]
default = ["client", "server", "shared-client-id"]

# Enables client features
client = ["bevy_replicon/client", "bevy_quinnet/client"]
# Enables server features
server = ["bevy_replicon/server", "bevy_quinnet/server"]

# Re-exports bevy_quinnet features
shared-client-id = ["bevy_quinnet/shared-client-id"]

[dev-dependencies]
serde = "1.0"
clap = { version = "4.1", features = ["derive"] }
bevy = { version = "0.14", default-features = false, features = [
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "bevy_gizmos",
    "x11",
    "default_font",


    # Can be removed later, temporary fixes for a bug in "0.14.0-rc.2"
    "bevy_scene",
    "bevy_pbr",
    "ktx2",
    "zstd",
] }

[[example]]
name = "simple_box"
path = "examples/simple_box.rs"

[[example]]
name = "tic_tac_toe"
path = "examples/tic_tac_toe.rs"

[[test]]
name = "transport"
